# Project9

./: .env.sample  .flake8  README.md  pyproject.toml
config/: settings.py  urls.py
store/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
store/management/commands/: seed_store.py  seed_users.py
store/migrations/: 0001_initial.py
